examples/negative/type_errors/L2/11_var_bool_limit_case.ob
MODULE LimitCase;

VAR x,y: INTEGER;
    b: BOOLEAN;

BEGIN
  x := 0;
  b := TRUE;
  CASE x OF
    0..19: y := 0
  | b: y := 1
  END
END LimitCase.
